<resources>
    <string name="app_name">Workout Log</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Already have an account?<u>Signup</u></string>
    <string name="already_have_an_account_login">Already have an account?<b>Login</b></string>
    <string name="signup">signup</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="input_password">Input Password</string>
    <string name="input_email">Input Email</string>
    <string name="enter_email">Enter email</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? <b>Signup</b></string>
    <string name="profile">Profile</string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="track_fragment">Track Fragment</string>
    <string name="plan_fragment">Plan Fragment</string>
    <string name="prudeahimbisibwe_gmail_com">prudeahimbisibwe@gmail.com</string>
    <string name="weight">Weight</string>
    <string name="_60_0_kg">60.0 Kg</string>
    <string name="height">Height</string>
    <string name="_160cm">160cm</string>
    <string name="bmi">BMI</string>
    <string name="sex">Sex</string>
    <string name="female">Female</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="_12_06_1996">12/06/1996</string>
    <string name="save">Save</string>
    <string name="ahimbisibwe_prudence">Ahimbisibwe Prudence</string>
    <string name="name">Name</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">logout</string>

</resources>